fix overflow issue on firefox (because of paddings)

--- a/poc/assets/sass/style.sass
+++ b/poc/assets/sass/style.sass
@@ -45,6 +45,7 @@ a
 #player
 	height: $coverSize
 	width: 100%
+	overflow-y: hidden
 
 
 //Cover
@@ -63,7 +64,7 @@ a
 //Left Side
 #content
 	+background-image(linear-gradient(top, #32363C, #17191E))
-	padding: ($shift - 4) $shift $shift $shift
+	padding: ($shift - 4) $shift 0 $shift
 	overflow: hidden
 
 #title, #desc
